## along with M2-Planet.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added
Added support for `enum`s
Added support for `const` on the left side of the type ("west const")
Added support for forward declaration of `struct`s
Added support for multi line macros with `\`s before newlines
Added support for `__LINE__` macro
Added support for `__FILE__` macro

* 1.11 - 2023-11-01
** Added
Added support for #warning.
Added global structs (and . operator).
Added local structs.
Added (u)int8_t, (u)int16_t and (u)int32_t.
Properly remove blocks that are not used (e.g. after #if 0)

** Changed
Updated M2libc dependency

** Fixed
Fixed doubly indirect structs.
Fixed a few segfaults.
Fixed macro expressions with ).
Add sufficient padding when assigning global constants on 64-bit architectures.
Fix structs greater than 512bytes in size on armv7l.

** Removed

* 1.10 - 2022-05-01
** Added
Generates a warning on unknown preprocessor commands
Implemented C99 negation
Add support for empty defines
Implemented support for #ifdef and #ifndef
Implemented #error statement support
Add support for evaluating macro variables
Define arch specific variables
	__i386__
	__x86_64__
	__arm__
	__aarch64__
	__riscv
	__riscv_xlen
Implemented #undef statement support
Add support for char** arrays
Added basic test for multi-dimensional arrays
Implemented minimal variable dereferencing support (base types only)
Add support for assignment operators
Add riscv32 port
Enable riscv32 tests
Added #FILENAME statement functionality to enable more flexiblity with debug messages

** Changed
Updated M2libc dependency

** Fixed
--max-string now validates passed input is an integer
-D now throws an error if not passed an argument
Fix segfault on half done #define statements
Correct #define behavior inside of #if/#elif/#else/#endif blocks
make clean now cleans up RISCV tests
catch half broken #define (statements instead of segfaulting
no longer segfault on null macro name