@@ -68,8 +68,8 @@ ff9e76a42e1cf8a12ed77987d7e4fb54b7ab304ec1e4ccd7b943dc430fa1b840  test/results/t
 991689c77303e5f7f28d88e5e698d5083be5af845e5ce25f35100e483cea6536  test/results/test0033-amd64-binary
 12388b72b420c2469072cf0fa768d8fe75e7374cb9258d451903ce2892101423  test/results/test0034-aarch64-binary
 2ecdaf86b4c0f50ac1b41946aebbb519d7dc2e38dd109df919ecead5c05b2eef  test/results/test0034-amd64-binary
-07908ad642616a9c96f130798b9f5369b977ca5f568e2c993db3b2c032a1aa3f  test/results/test0035-aarch64-binary
-0eee32bce3c849b69d2831138266ce8a7c1d1d949ce1db83834a4fbeb464853e  test/results/test0035-amd64-binary
+10cf4274ba894af1e2b5742155ffac7f75394c8d7c1c21650eaeb114ae7b5a4a  test/results/test0035-aarch64-binary
+2836f3703b9220855720edbf990aa5a1d684765da197949a5e36f5b0c1d988ce  test/results/test0035-amd64-binary
 bde7a74e77551915f685007cffda9c70f53ffdf6703272c8066c22d1cc395be8  test/results/test0100-aarch64-binary
 ec4da43c473924f70827c904a4c6d5f45701ab9e76b444ba152af893e16ee440  test/results/test0100-amd64-binary
 0c2deceaab520027bd078898fd9825fda840f01941c52aac086ad38dfc543526  test/results/test0101-aarch64-binary
@@ -84,5 +84,5 @@ aa87e663677a0551fe52c2b047c13caa90c9e4855cc617aa970117b53b9a58dc  test/results/t
 e97b9328d4d8ffd130cd89920698c4e6cfc4e9b1b4a848dde3073016291d4976  test/results/test0105-amd64-binary
 c39ebae7013d9096215862241a4d919a871b790b9054e454b6a7b0ff36037f61  test/results/test0106-aarch64-binary
 d4f64948ebfa14e446a321a481c2992eb44ba3302795355353b20533a1b4eb06  test/results/test0106-amd64-binary
-d5b79047444e31f34bc22dbb114286360c7356bcf7fa29c85b559ccaaad242d7  test/results/test1000-aarch64-binary
-5be250b292c7f7aeec083cac7fadd5f582480d4f36b1f47efebf7d07d291c676  test/results/test1000-amd64-binary
+3863c593ad5899a5046ad3f0a78a46c72d42db1f2757681855cf9cc2efcf755f  test/results/test1000-aarch64-binary
+7c2ad53a84f49e037abd7ecc37a4772770ace0af1d444d75d9e2ba84e75130bf  test/results/test1000-amd64-binary
